--- a/index.html
+++ b/index.html
@@ -127,6 +127,6 @@
     </div>
 
     <script src="./pages/viewer.js"></script>
-    <script src="./pages/index.js"></script>
+    <!-- <script src="./pages/index.js"></script> -->
   </body>
 </html>
